test-cases/negative/test_008_test_without_end.lay
# negative test: test without end test
# expected: error should be thrown

test 'my test'
  the variable x of type Number is 5


